# Blender-MCP

./: .npmignore  README.md  TEST.md  package-lock.json  package.json  pyproject.toml
blender_mcp/: __init__.py  server.py
blender_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
blender_mcp/config/: __init__.py
blender_mcp/utils/: __init__.py
output/: Indian_temple.blend  duck.blend
src/: index.ts
src/commands/: generators.ts  model.ts  search.ts
src/config/: index.ts
src/utils/: logger.ts
